# ChangeLog for sys-libs/nss-db
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/nss-db/ChangeLog,v 1.9 2005/07/04 07:45:22 dholm Exp $

  04 Jul 2005; David Holm <dholm@gentoo.org> nss-db-2.2.3_pre1-r1.ebuild:
  Added to ~ppc.

*nss-db-2.2.3_pre1-r1 (03 Jul 2005)

  03 Jul 2005; Robin H. Johnson <robbat2@gentoo.org>
  +files/nss-db-2.2.3_pre1-root-upgrade-only.patch,
  +nss-db-2.2.3_pre1-r1.ebuild:
  Add small patch to only use db->update when root privileges are present.

*nss-db-2.2.3_pre1 (16 Feb 2005)

  16 Feb 2005; Robin H. Johnson <robbat2@gentoo.org> +files/remake-all-db,
  +nss-db-2.2.3_pre1.ebuild:
  Finally, a new version of nss_db, from Redhat's upstream work, plus patches
  from Mandrake.

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> nss-db-2.2-r1.ebuild:
  Add inherit eutils

  27 Jun 2003; Paul de Vrieze <pauldv@gentoo.org> nss-db-2.2-r1.ebuild,
  files/db3.patch:
  This does not work with glibc-2.3.x, so block it in the dependencies. Also
  patch the configure script to use the db3 lib

*nss-db-2.2-r1 (1 Feb 2002)

  20 Jul 2002; mark Guertin <gerk@gentoo.org> :
  Added keywords (-ppc)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.