@@ -1,11 +1,33 @@
-MD5 5842c62d80f8bdba0e6c242e6b864065 ChangeLog 1623
-MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
-MD5 610312df9caa3ff32a3b73dc9430e21f nss-db-2.2-r1.ebuild 1021
-MD5 f16cb958d7aa84151d64918c033ae2c9 nss-db-2.2.3_pre1.ebuild 2658
-MD5 3cba3c7d8be1c8e30d78a19a88d91823 nss-db-2.2.3_pre1-r1.ebuild 2765
+MD5 3b51b4b8f15693298f6cac154b03bd4d ChangeLog 1729
+RMD160 2088e7282c66062c7028b8f38811eef0191436f8 ChangeLog 1729
+SHA256 24725e403ea575836d14aa8ac08f7c846b06051703557715432ad0b7e3c3d1f2 ChangeLog 1729
 MD5 03cdab663eb8542cea7c07707d596740 files/db3.patch 1174
+RMD160 eeac21cb96b84070ddd1cb4975e4c42793711f12 files/db3.patch 1174
+SHA256 2db3285c19657c9dfad4ced22e17d0bf19268c12779e781716cd87db6fac7bf0 files/db3.patch 1174
 MD5 ca50c2850faf4fa26fcf5dd10838aab9 files/digest-nss-db-2.2-r1 62
+RMD160 2b7523f091c4498e3927e311fc6a4447a49a37ba files/digest-nss-db-2.2-r1 62
+SHA256 ac2999eaebdd100bf03f3ab1b7855bdb8784170a7f7b2c0135c61dc86a9a56a8 files/digest-nss-db-2.2-r1 62
 MD5 b5919430d82230e5d31c30d730da9149 files/digest-nss-db-2.2.3_pre1 299
-MD5 597edf0286c0a43308c48b9f7112e798 files/remake-all-db 233
-MD5 b5919430d82230e5d31c30d730da9149 files/digest-nss-db-2.2.3_pre1-r1 299
+RMD160 4849e98844e00b02496811a348542b4a04569052 files/digest-nss-db-2.2.3_pre1 299
+SHA256 6c716732c2f93ff14c25958919d55ef656f0e03e579717282848977c9c4240e5 files/digest-nss-db-2.2.3_pre1 299
+MD5 2c74ff8d4ff5dcae1c0836c63364cd9d files/digest-nss-db-2.2.3_pre1-r1 1081
+RMD160 ce1e4bb506eec03fcfdbb141cd6531b22cf00967 files/digest-nss-db-2.2.3_pre1-r1 1081
+SHA256 966017a89c24f172276f16f3d357b3d1f8cd151f9873dfb235f3f3c14c96fbed files/digest-nss-db-2.2.3_pre1-r1 1081
 MD5 bfa0ad4e21b3a2d1a8ee63b734c67bc0 files/nss-db-2.2.3_pre1-root-upgrade-only.patch 706
+RMD160 e13940f6ff0dc48014a73a245b11ca9086de6a50 files/nss-db-2.2.3_pre1-root-upgrade-only.patch 706
+SHA256 097bb136444f03aebd482a81c6039ef82c8cc3aeee80c6750f3165d7d9a2fef3 files/nss-db-2.2.3_pre1-root-upgrade-only.patch 706
+MD5 597edf0286c0a43308c48b9f7112e798 files/remake-all-db 233
+RMD160 e1a896ad287edf451a68bcdfa4c68e4c0678556e files/remake-all-db 233
+SHA256 16ea89210a3e5d0249665b425ad191244d159639028b1f9cb534d7cc9aef4f7d files/remake-all-db 233
+MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
+RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
+SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata.xml 164
+MD5 610312df9caa3ff32a3b73dc9430e21f nss-db-2.2-r1.ebuild 1021
+RMD160 90c2bd15afaa62f4839c051822bbb86972a0d1c7 nss-db-2.2-r1.ebuild 1021
+SHA256 67f13ba6a5af6cea431f6ad37469849bc631fc66ef6559029b9a68621c011dfd nss-db-2.2-r1.ebuild 1021
+MD5 2819465d5de71505c244e52202b2ab14 nss-db-2.2.3_pre1-r1.ebuild 2865
+RMD160 dc780fff49a605f88462a3258af20ae1d2bb7434 nss-db-2.2.3_pre1-r1.ebuild 2865
+SHA256 f2d63a7297bfd2b0ec8e95c14ad98f516c72e0327b71c36347d4eb2122b2dd8d nss-db-2.2.3_pre1-r1.ebuild 2865
+MD5 f16cb958d7aa84151d64918c033ae2c9 nss-db-2.2.3_pre1.ebuild 2658
+RMD160 3a490e427634266bdb3311a7c34f575482ce2b40 nss-db-2.2.3_pre1.ebuild 2658
+SHA256 5abf4d428ae0c9564210a9ae88308970a00ec9847169cf249528306bc6d45503 nss-db-2.2.3_pre1.ebuild 2658
