@@ -1,4 +1,12 @@
-MD5 b4440ba2865d28e9068e465426c19ede nss_db-2.2.3pre1.tar.gz 235360
-MD5 ec455e427bf7bf4daba3427fd4066db3 nss_db-2.2.3pre1-external.patch.bz2 1870
-MD5 d02a1a231c70e28320ed21e883be4d6a nss_db-2.2.3pre1-dbupgrade.patch.bz2 263
 MD5 e26590083b9f32d2c134d204ba0ad72e nss_db-2.2.3pre1-dbopen.patch.bz2 258
+RMD160 2a7b96393cf3c338c8bc1041e26824dbca74aa57 nss_db-2.2.3pre1-dbopen.patch.bz2 258
+SHA256 9d7bf1ef17ca91c59c234bfa96d4b9e3f866a792c609a02cc6d9daa601dee1d3 nss_db-2.2.3pre1-dbopen.patch.bz2 258
+MD5 d02a1a231c70e28320ed21e883be4d6a nss_db-2.2.3pre1-dbupgrade.patch.bz2 263
+RMD160 90ad8e330a7677f8ebd4a2fd210d258d8ba1e496 nss_db-2.2.3pre1-dbupgrade.patch.bz2 263
+SHA256 31052eb79cc4aa60f639a3a57d9225630327ee6c728d62eda1d9c91ea7d70dc3 nss_db-2.2.3pre1-dbupgrade.patch.bz2 263
+MD5 ec455e427bf7bf4daba3427fd4066db3 nss_db-2.2.3pre1-external.patch.bz2 1870
+RMD160 d85fdb31935c5ab75ed80b1159155f5fa5b8a2e5 nss_db-2.2.3pre1-external.patch.bz2 1870
+SHA256 dbc45a4dc7c977fae2193e0a14fdb862a5f42479ac40da0d4772d5d66e95ade0 nss_db-2.2.3pre1-external.patch.bz2 1870
+MD5 b4440ba2865d28e9068e465426c19ede nss_db-2.2.3pre1.tar.gz 235360
+RMD160 a511fcc1dc7937e13e84ccd125d688463ac52555 nss_db-2.2.3pre1.tar.gz 235360
+SHA256 0c5d677a49c7bf6b9318bf40adf335839a668d1c7509e9b1915bd22a9e0ac694 nss_db-2.2.3pre1.tar.gz 235360
