@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/nss-db
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/nss-db/ChangeLog,v 1.9 2005/07/04 07:45:22 dholm Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/nss-db/ChangeLog,v 1.10 2006/03/16 21:11:11 pauldv Exp $
+
+  16 Mar 2006; <pauldv@gentoo.org> nss-db-2.2.3_pre1-r1.ebuild:
+  Fix building with newer db versions.
 
   04 Jul 2005; David Holm <dholm@gentoo.org> nss-db-2.2.3_pre1-r1.ebuild:
   Added to ~ppc.
